# snotes

./: .gitignore  CMakeLists.txt  Readme.md
inclde/: Menu.hpp
include/: Editor.hpp  Menu.hpp  Notes.hpp
src/: Editor.cpp  Menu.cpp  Notes.cpp  exec_command.cpp  main.cpp  testRapid.cpp
